--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   REGISTRY: ghcr.io # 깃허브 컨테이너 저장소를 사용한다.
-  IMAGE_NAME: yonggyo1125/delivery
+  IMAGE_NAME: kmeans00/demo
   VERSION: latest
 
 jobs:
